Unify cooking task input inventory access